[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeal-feeds"
description = "A command line application for adding user contributed docset feeds to Zeal."
version = "0.4.0.dev0"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["zeal", "docsets"]
authors = [{ name = "Scott Searcy", email = "smsearcy@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["attrs >= 21.1.0", "cattrs", "platformdirs", "requests", "rich"]

[dependency-groups]
dev = [
  "mypy==1.15.*",
  "pytest==8.3.*",
  "pytest-cov>=5.0.0",
  "ruff==0.11.*",
  "types-requests>=2.32.0.20240907",
]

[project.urls]
Documentation = "https://github.com/smsearcy/zeal-feeds#readme"
Issues = "https://github.com/smsearcy/zeal-feeds/issues"
Source = "https://github.com/smsearcy/zeal-feeds"

[project.scripts]
zeal-feeds = "zeal_feeds.main:main"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/zeal_feeds"]

[tool.coverage.run]
branch = true
parallel = true
source = ["zeal_feeds"]

[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear"
  "C4",  # flake8-comprehensions
  "C90", # mccabe
  "D",   # pydocstyle
  "E",   # pycodestyle (error)
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PLC", # pylint (convention)
  "PLE", # pylint (error)
  "PLR", # pylint (refactor)
  "PLW", # pylint (warning)
  "RET", # flake8-return
  "RUF",
  "SIM", # flake8-simplify
  "W",   # pycodestyle (warning)
  "YTT", # flake8-2020
]
ignore = [
  "A003",    # builtin-attribute-shadowing
  "D105",    # magic-method
  "D107",    # public-init
  "D203",    # one-blank-line-before-class
  "D213",    # multi-line-summary-second-line
  "PLR2004", # magic-value-comparison
]
